# claude-agent-manager

./: .gitignore  .npmignore  CLAUDE.md  DOCS.md  README.md  agent-manager  agent-manager-cli.sh  agent-manager-simple.sh  agent-manager-tree.py  agent-manager-v2.py  agent-manager.py  agent-manager.sh  build-binary-nuitka.sh  build-binary.sh  copy-agents-interactive.sh  copy-agents-multilevel.sh  copy-agents.sh  install.sh  package.json  pyproject.toml  test-tree.py  uninstall.sh  verify-tree.py
.github/workflows/: release.yml
agents-collection/backend/api/rest/: openapi-expert.md
agents-collection/infrastructure/: platform-developer.md
agents-collection/platform/: platform-tester.md  single-spa-developer.md
agents/backend/: nodejs-developer.md  openapi-expert.md  python-developer.md  spring-developer.md  temporal-developer.md
agents/frontend/: react-developer.md  vanilla-js-developer.md  vue3-developer.md
agents/infrastructure/: e2e-tester.md  platform-developer.md  tech-architect.md
agents/platform/: platform-product-owner.md  platform-tester.md  service-product-owner.md  single-spa-developer.md
docs/: DIARY.md  distribution.md  sources-system.md
docs/architecture/: platform-architecture.md
examples/single-spa-platform/: menu-system.md
scripts/: build-binary.sh  download-binary.js
src/claude_agent_manager/: __init__.py
src/claude_agent_manager/agents-collection/backend/: nodejs-developer.md  temporal-developer.md
src/claude_agent_manager/agents-collection/frontend/: vanilla-js-developer.md
test-npm-bin/: index.js  package.json
(+6 files in other folders)
